@@ -1,6 +1,6 @@
-Description: ID3 tags, produce TXXX frames compatible with Winamp,
-  the correct RVA2 frames           
-Author: Stefan Fritsch <sf@sfritsch.de>
+Description: in ID3 tags, produce TXXX frames compatible with Winamp, as well
+  as the correct RVA2 frames
+Author: Simon McVittie <smcv@debian.org>
 Last-Update: 2011-07-11
 Forwarded: https://sourceforge.net/tracker/?func=detail&aid=3022522&group_id=49979&atid=458158
 
